# zoner-studio-photo-rater

./: README.md  README_GEMINI.md  apply_ratings.py  extract_previews.py  main.py  pyproject.toml  ratings.json  zps_rater.spec
prompts/: RATING_PROMPT_V2.md
scripts/: apply_ratings.py  extract_previews.py  rate_with_ai.py  run_gui.py  run_zps_workflow.cmd  run_zps_workflow.ps1
zoner_studio_photo_rater.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
