[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoner-studio-photo-rater"
version = "0.1.0"
description = "Automatické hodnocení fotek pro Zoner Photo Studio X"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rawpy>=0.20.0",
  "Pillow>=10.0.0",
]

[tool.setuptools]
py-modules = []
