[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoner-studio-photo-rater"
version = "0.1.1"
description = "Automatické hodnocení fotek pro Zoner Photo Studio X"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rawpy>=0.20.0",
  "Pillow>=10.0.0",
  "anthropic>=0.40.0",
  "google-genai>=0.8.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]

[tool.setuptools]
py-modules = []
